2006-09-29  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/classes/compiler_test.py: Fix quoting of command annotation.
	* qm/fields.py: Add DictionaryField.
	* qm/test/context.py: Add GetDerivedValue and as_string_list functions.
	* qm/test/database.py: Prevent redundant instantiation of extension 
	classes.
	
2006-09-05  Mark Mitchell  <mark@codesourcery.com>

	* qm/executable.py (Executable.Spawn): Search PATH on Windows if
	appropriate.

2006-09-03  Mark Mitchell  <mark@codesourcery.com>

	* qm/host.py (Host.UploadAndRun): Correct logic for deleting files.

2006-08-18  Stefan Seefeld  <stefan@codesourcery.com>

	Reorganize and enhance Tutorial:
	* qm/doc/tutorial.xml: New file.
	* qm/doc/qmtest.ent: Likewise.
	* qm/doc/introduction.xml: Likewise.
	* qm/doc/cli_reference.xml: Likewise.
	* qm/doc/concepts.xml: Likewise.
	* qm/doc/cs.css: Likewise.
	* qm/doc/html.xsl: Likewise.
	* qm/doc/qm-opl.xml: XML-ified.
	* qm/doc/manual/common-manual.xml: Removed.
	* qmdist/command/build_doc.py: Adjust build procedure for html generation.
	
2006-08-17  Mark Mitchell  <mark@codesourcery.com>

	* qm/host.py (Host.Run): Add 'relative' parameter.
	(Host.UploadAndRun): Use it.
	* qm/test/classes/ssh_host.py (SSHHost.Run): Add 'relative'
	parameter.

	* qm/test/cmdline.py (QMTest.__ExecuteSummarize): Display resource
	results too.
	* qm/test/doc/reference.xml: Document.

2006-07-17  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/cmdline.py: Allow 'qmtest create' to create explicit suites,
	and make their content visible through 'qmtest ls'.

2006-06-21  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/test/report.py: Add support for '-' special output file.

2006-06-09  Stefan Seefeld  <stefan@codesourcery.com>

	* qm/host.py: Fix signature of Host.Run(), and implement it
	(using local_host.LocalHost.Run() code).
	* qm/test/classes/local_host.py: Remove now obsolete Run() method.
	* qm/test/classes/ssh_host.py: Derive from Host, not LocalHost.
